tests/paczka1/fuzzy1/50764793.err
Error in line 11: uwoRk4WfuRC A476 586,8
Error in line 18: uwoRk4WfuRC A476 21,8
Error in line 21: WgIHEq S609 81,6
Error in line 33: A476 S609 14,8
Error in line 34: A476 S274 87,1
Error in line 20: uwoRk4WfuRC S543 11,9
Error in line 37: uwoRk4WfuRC A476 4,6
Error in line 35: A476 A476 16,0
